feat: refactor email templates and remove unused functions
- remove `premail()` function from `gits.mailer` to simplify email delivery
- update variable names for clarity, changing `order_no` to `order_id`
- enhance `tickets_summary` with additional ticket types for better detail
- introduce new html components for email templates to improve structure
- replace old html structure in `magic_link.html.heex` and `order_completed.html.heex` with new components for maintainability
- add new `order_summary_card` component to encapsulate order details in emails

--- a/lib/gits_web/live/storefront_live/event_order.html.heex
+++ b/lib/gits_web/live/storefront_live/event_order.html.heex
@@ -240,7 +240,7 @@
   </div>
 
   <%= if @order_state == :processed do %>
-    <.form :let={f} phx-submit="confirm" for={@confirm_form} class="grid  items-center gap-4 p-2">
+    <.form phx-submit="confirm" for={@confirm_form} class="grid  items-center gap-4 p-2">
       <div class="flex">
         <.button>
           <span>Confirm Order</span>
