feat: add timestamps to users and update user display
- remove commented-out `has_many :hosts` association in `user`
- update user display in `index.html.heex` to show email and name
- add migration `usertimestamps` to include `created_at` and `updated_at`
- create resource snapshot for users with new timestamp attributes

these changes improve user data management and enhance ui clarity.

--- a/lib/gits_web/live/admin_live/index.html.heex
+++ b/lib/gits_web/live/admin_live/index.html.heex
@@ -104,7 +104,7 @@
 <div :if={@live_action == :users} class="p-2">
   <div class="overflow-auto rounded-lg border sm:overflow-hidden">
     <.table id="jobs" rows={@users}>
-      <:col :let={user} label="Name">{user.name}</:col>
+      <:col :let={user} label="User">{user.email} ({user.name || "_"})</:col>
       <:col :let={user} label="Created at">
         {user.created_at
         |> DateTime.shift_zone!("Africa/Johannesburg")
