--- a/lib/gits_web/components/layouts/not_found.html.heex
+++ b/lib/gits_web/components/layouts/not_found.html.heex
@@ -1,5 +1,5 @@
 <.header user={@current_user} />
-<div class="min-h-[calc(100dvh-10rem)] flex mx-auto max-w-screen-xl p-2 flex-col items-start gap-4 justify-center">
+<div class="flex mx-auto max-w-screen-xl py-40 px-2 flex-col items-start gap-4 justify-center">
   <h1 class="text-8xl font-bold text-black/10">404</h1>
   <p class="text-sm text-zinc-700 font-medium">
     Sorry, we couldn't find the page you're looking for.
