feat: update button styles and configuration settings
- change `order_created_schedule_seconds` from 60 to 1_200 for
  better scheduling.
- update button `variant` from `:fo` to `:accent` for improved
  visibility.
- modify button `variant` to `:solid` for the "view tickets"
  action to enhance user experience.

--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -94,7 +94,7 @@
     </.inputs_for>
     <Gits.Turnstile.widget events={[:success]} appearance="interaction-only" />
 
-    <.button variant={:fo} disabled={not @verified?}>
+    <.button variant={:accent} disabled={not @verified?}>
       <span>Get tickets</span>
     </.button>
   </.form>
