--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -11,6 +11,9 @@
     />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <Gits.Turnstile.script />
+
+    <script src="//app.storyblok.com/f/storyblok-v2-latest.js" type="text/javascript">
+    </script>
     <script defer phx-track-static type="module" src={~p"/assets/app.js"}>
     </script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript">
