--- a/lib/gits_web/controllers/page_html/faq.html.heex
+++ b/lib/gits_web/controllers/page_html/faq.html.heex
@@ -14,14 +14,14 @@
             team.
           </p>
         </div>
-        <div class="mt-10 lg:col-span-7 lg:mt-0">
+        <div class="mt-10 lg:col-span-7 lg:mt-0 content-type">
           <dl class="space-y-10">
-            <div :for={faq <- @faqs} id={faq.id}>
+            <div :for={faq <- @faqs}>
               <dt class="text-base font-semibold leading-7 text-gray-900">
-                {faq.question}
+                {faq["question"]}
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
-                {raw(faq.answer)}
+                {faq["answer"]}
               </dd>
             </div>
           </dl>
