--- a/lib/gits_web/controllers/storyblok_html/story.html.heex
+++ b/lib/gits_web/controllers/storyblok_html/story.html.heex
@@ -1,3 +1,3 @@
-<div class="mx-auto max-w-screen-lg p-2 pb-20">
+<div class="mx-auto max-w-screen-xl p-2 pb-20">
   <.blok story={@story["content"]} />
 </div>
