--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -221,8 +221,8 @@
         <div class="pb-4">
           <.icon name={icon} class="text-zinc-400 text-xl" />
         </div>
-        <span class="font-medium text-zinc-500">{label}</span>
-        <span class="text-5xl font-semibold text-zinc-800">
+        <span class="font-medium text-sm text-zinc-500">{label}</span>
+        <span class="text-4xl font-semibold text-zinc-900">
           {value}
         </span>
       </div>
