--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -18,7 +18,7 @@
     Unlock <span class="text-brand-base">Unforgettable</span> Experiences
   </h1>
   <p class="max-w-lg text-lg text-zinc-500 dark:text-zinc-300">
-    Start planning and hosting your events today.
+    Start planning and hosting your events with us today.
   </p>
   <div class="flex gap-8 font-medium">
     <.button size={:lg} variant={:accent} href={~p"/host-with-us"}>
