feat: update percentage charge and improve ticket price display
- change `percentage_charge` from 0 to 5 for better revenue.
- remove deprecated `events.html.heex` file to clean up codebase.
- format ticket price in `tickets.html.heex` to include currency symbol.

--- a/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
@@ -20,7 +20,7 @@
       </div>
     </:col>
     <:col :let={ticket} label="Quantity">{ticket.quantity}</:col>
-    <:col :let={ticket} label="Price">{ticket.price}</:col>
+    <:col :let={ticket} label="Price">R{ticket.price}</:col>
     <:col :let={ticket} label="Limit p.p" optional>{ticket.limit_per_user}</:col>
 
     <:action :let={ticket}>
