--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -1,29 +1,10 @@
-<div class="flex items-center gap-2 p-2">
-  <div class="flex w-full grow items-center gap-1 text-sm">
-    <%= if @live_action == :index do %>
-      <div class="flex shrink-0 items-center truncate rounded-lg border border-transparent p-2 text-sm/5 font-semibold">
-        <span class="truncate ">
-          Settings
-        </span>
-      </div>
-    <% else %>
-      <.button
-        phx-click={JS.patch(Routes.host_settings_path(@socket, :index, @host.handle))}
-        variant={:ghost}
-        size={:none}
-        class="group max-w-48 p-2"
-      >
-        <span class="truncate text-zinc-400 group-hover:text-zinc-600">
-          Settings
-        </span>
-      </.button>
-      <span class="text-xs font-semibold text-zinc-400">/</span>
-      <div class="flex  shrink-0 items-center truncate rounded-lg px-1 text-sm/6 font-semibold">
-        <span class="">{@section}</span>
-      </div>
-    <% end %>
-  </div>
-</div>
+<.live_component
+  :if={@live_action == :index}
+  module={Index}
+  id="api"
+  current_user={@current_user}
+  host={@host}
+/>
 
 <%= if @live_action == :index do %>
   <div class="grid max-w-screen-md w-full gap-8 p-2">
@@ -217,3 +198,11 @@
     </.form>
   </div>
 <% end %>
+
+<.live_component
+  :if={@live_action == :api}
+  module={Api}
+  id="api"
+  current_user={@current_user}
+  host={@host}
+/>
