--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -1,16 +1,8 @@
-<div class="flex items-center gap-2 p-2">
-  <div class="flex w-full grow items-center gap-1 text-sm">
-    <.button onclick="history.back()" variant={:ghost} size={:none} class="group max-w-48 p-2">
-      <span class="truncate text-zinc-400 group-hover:text-zinc-600">
-        Events
-      </span>
-    </.button>
-    <span class="text-xs font-semibold text-zinc-400">/</span>
-    <div class="flex  shrink-0 items-center truncate rounded-lg px-1 text-sm/6 font-semibold">
-      <span class="">{@section}</span>
-    </div>
-  </div>
-</div>
+<.host_header current_user={@current_user} host={@host}>
+  <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@host.handle}/events"} />
+  <span class="text-xs font-semibold text-zinc-400">/</span>
+  <.host_breadcrumb_label text={@event.name} />
+</.host_header>
 
 <div class="flex flex-wrap items-end gap-4 p-2">
   <div class="aspect-[3/2] h-20 overflow-hidden rounded-lg bg-zinc-200 lg:h-24">
@@ -189,6 +181,17 @@
       >
         <span class="px-1 capitalize">
           {action}
+        </span>
+      </.link>
+
+      <.link
+        patch={Routes.host_events_path(@socket, :settings, @host.handle, @event.public_id)}
+        replace={true}
+        aria-selected={"#{:settings == @live_action}"}
+        class="-mb-0.5 border-b-2 border-transparent py-2 text-sm font-medium text-zinc-400 aria-selected:border-zinc-500 aria-selected:text-zinc-800"
+      >
+        <span class="px-1">
+          Settings
         </span>
       </.link>
     </div>
